examples/test/testpolicy3994.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3994
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key26: value9
      key40: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value31
          key6: value6
          key0: value6
      podSelector:
        matchLabels:
          key35: value36
          key38: value14
